Mon, 29 Nov 2011 12:37:32 -0700  Sean Reifschneider  <jafo@tummy.com>

   * Bug #887765: Interrupted connection to memcache server can cause
   inconsistencies.
   Added "flush_on_reconnect" (defaults to off) to Client() which will
   cause a client that has lost connection to a server and then reconnects
   to flush the cache on the reconnect so that it doesn't get old values
   from that server.  Patch by Daniel Benamy.

Sun, 27 Nov 2011 18:15:32 -0700  Sean Reifschneider  <jafo@tummy.com>

   * Bug #745633: Values of maximum size are not stored
   API inconsistency, max value length was tested for <= while max KEY
   length was <.  So I picked that keys and values *LONGER* than the
   specified max value are what is used, and added documentation and tests
   to that effect.  The test for max value tested that length plus 4, so
   I've changed that to be that value plus 1.  Issue found by matt-quru.

   * Bug #713488: Issues Invalid "delete" command.
   Protocol has changed so that the "delete" operation no longer takes a
   "time" argument.  It seems that some servers will refuse a "delete key
   0" while others will accept it, but the official server will NOT accept
   "delete key 1".  So I've changed it so that if no "time" argument is
   specified, no time argument is sent to the server.

   * Bug #713451: server.expect("END") needs to be in a finally block
   Expect an "END" when the _recv_value() raises an exception.
   Patch by Jay Farrimond.

   * Bug: #741090: cas cache can grow unbounded.  Default now is that the
   cache is not used, unless the "Client()" object is created with
   "cache_cas=True".  In that case, you need to have your own cas clearing
   code, a simple one would be to use Client().reset_cas() to completely
   clear the cas_ids cache.  Problem pointed out by Shaun Cutts.

   * Bug #728359: Make python-memcache work on memcache restarts.
   Patch by Tarek Ziade', reviewed and further patches submitted by Hugo