@@ -1,3 +1,11 @@
+   * Bug #974632: _ConnectionDeadError sometimes was escaping the get/set
+   code.  This should return to readline() not raising an exception, except
+   in the case that it's called from the get/set().  Report from Gary
+   Poster, proposed patch by Brad Crittenden.
+
+   Misc fixes by Brad Crittenden: fixing a docstring, if "port" is set to
+   any false-like value it will default to 11211.
+
 Mon, 29 Nov 2011 12:37:32 -0700  Sean Reifschneider  <jafo@tummy.com>
 
    * Bug #887765: Interrupted connection to memcache server can cause
